feat: cambiar la informacion de home

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -31,8 +31,8 @@ import SocialPill from "@/components/SocialPill.astro"
     class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
     1 año de experiencia. <strong>Ingeniero en ciencias computacionales </strong> 
-    de Jalisco, México 🇲🇽. Fullstack Web Developer y Mobile Developer con React Native
-    únicas.
+    de Jalisco, México 🇲🇽. Fullstack Web Developer y Mobile Developer con React Native. 
+    Desarrollando Software Único.
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
     <SocialPill href="mailto:47erickortega@gmail.com">
