--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,8 +9,8 @@ import SocialPill from "@/components/SocialPill.astro"
 <div class="max-w-xl">
   <div class="flex gap-4 mb-4">
     <img
-      class="rounded-full shadow-lg size-16"
-      src="/midudev.webp"
+      class="rounded-full shadow-lg size-16 object-cover"
+      src="/erick.webp"
       alt={personalImageAlt}
     />
     <a
