--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,17 +2,19 @@
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
   {
-    date: "Actualmente...",
+    date: "Noviembre 2023 - Actualmente...",
     title: "Creador de Contenido",
     company: "Twitch",
     description:
       "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
+    // link: "https://twitch.tv/midudev",
+    image: 'companies/yo-contigo-it.webp',
   },
   {
-    date: "Septiembre 2022",
-    title: "Principal Frontend Engineer",
-    company: "Adevinta Spain",
+    date: "Mayo 2023 - Noviembre 2023",
+    title: "Intern Fullstack Web Developer",
+    company: "Clever Cloud",
+    image: 'companies/clever-cloud.webp',
     description:
       "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
   },
