feat: cambiar la experiencia de trabajo

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,20 +3,20 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
   {
     date: "Noviembre 2023 - Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
+    title: "Fullstack Web Developer Jr",
+    company: "Yo Contigo It",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
+      "Soy responsable de desarrollar software utilizando tecnologías como JavaScript, TypeScript, Angular, AngularJS y React Native. Lidero un equipo en un proyecto interno, asegurando el cumplimiento de objetivos y plazos. En un proyecto móvil con React Native, implementé una arquitectura limpia y hexagonal junto con el patrón MVVM. Participo en reuniones con clientes para generar más requerimientos y colaboro con mi equipo para planificar, diseñar y ejecutar tareas, aplicando habilidades técnicas y de colaboración. También soy responsable de hacer el software responsivo, realizar builds en iOS y publicarlas en la App Store, además de documentar las características desarrolladas.",
     // link: "https://twitch.tv/midudev",
     image: 'companies/yo-contigo-it.webp',
   },
   {
-    date: "Mayo 2023 - Noviembre 2023",
+    date: "Mayo 2023 - Octubre 2023",
     title: "Intern Fullstack Web Developer",
     company: "Clever Cloud",
     image: 'companies/clever-cloud.webp',
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "Durante mi experiencia, me he especializado en desarrollar historias de usuarios con JavaScript, Vue.js, Python y PHP. He trabajado en equipos ágiles con metodologías Scrum, usando herramientas como Jira, Bitbucket y Confluence. Soy hábil documentando historias de usuario en Confluence y trabajando en equipo para planificar y ejecutar proyectos, combinando habilidades técnicas y colaborativas para lograr resultados excepcionales.",
   },
 ]
 ---
