feat: crear nuevo proyecto

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -80,6 +80,15 @@ const TAGS = {
 };
 const PROJECTS = [
   {
+    title: "NDG",
+    description:
+      "NDG es una landing page para una marca de servicio de reparación de equipo dental, desarrollada con React y Bootstrap. Proporciona una interfaz atractiva y móvil-responsiva para promover los servicios de la marca, utilizando React para componentes dinámicos y Bootstrap para un diseño moderno y accesible.",
+    link: "https://nuevadentalgdl.com/",
+    github: "https://github.com/Erick-Hernandez-Ortega/NDG",
+    image: "/projects/ndg.webp",
+    tags: [TAGS.REACT, TAGS.TYPESCRIPT, TAGS.BOOSTRAP],
+  },
+  {
     title: "AbastoTotal",
     description:
       "AbastoTotal es un software de gestión para abarrotes, desarrollado con Angular, Firebase y Bootstrap. Facilita la administración de inventarios, ventas y proveedores, proporcionando una solución eficiente y centralizada. Utiliza Angular para una interfaz dinámica, Firebase para almacenamiento de datos y autenticación, y Bootstrap para un diseño móvil-responsivo.",
