fix: corregir tags de proyectos

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -101,7 +101,7 @@ const PROJECTS = [
     link: "https://erick-hernandez-ortega.me/abastototal/",
     github: "https://github.com/Erick-Hernandez-Ortega/AbastoTotal",
     image: "/projects/abastototal.webp",
-    tags: [TAGS.FIREBASE, TAGS.REACT, TAGS.REACT_NATIVE, TAGS.TYPESCRIPT],
+    tags: [TAGS.FIREBASE, TAGS.ANGULAR, TAGS.TYPESCRIPT],
   },
   {
     title: "Adogtame",
