feat: actualizar about me

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,25 +1,35 @@
 ---
- const personalImageAlt = "Erick Hernández Ortega"
+const personalImageAlt = "Erick Hernández Ortega";
 ---
 
-<article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
+<article
+  class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row"
+>
   <div
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Erick Ramón Hernández Ortega. Actualmente estoy trabajando en <strong
-        >Yo Contigo It de Fullstack Web Developer JR</strong
-      >.
+      Me llamo Erick Ramón Hernández Ortega. Actualmente estoy en búsqueda de
+      nuevas oportunidades como <strong
+        >Fullstack Web Developer JR o React Native Developer</strong
+      >, donde pueda aportar mis habilidades y seguir desarrollándome
+      profesionalmente.
     </p>
 
     <p>
       Algunos de mis éxitos incluyen <strong
-        >liderar un proyecto con React Native en la empresa de Yo Contigo It</strong
-      >. Siempre aprendiendo nuevas tecnologías y cosas nuevas.
+        >liderar un proyecto con React Native en la empresa Yo Contigo It y colaborar en el desarrollo de la app AMX 2.0 como parte del equipo
+      técnico de Aeroméxico.</strong> Siempre estoy aprendiendo nuevas tecnologías y ampliando
+      mis conocimientos.
     </p>
-
   </div>
 
-  <img width="200" height="200" src="/erick.webp" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
-
+  <img
+    width="200"
+    height="200"
+    src="/erick.webp"
+    alt={personalImageAlt}
+    class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
+    style="object-position: 50% 50%"
+  />
 </article>
