feat: actualizar experiencia

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,11 +2,27 @@
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
   {
-    date: "Noviembre 2023 - Actualmente...",
+    date: "Octubre 2024 - Diciembre 2024",
+    title: "React Native Developer Jr",
+    company: "Aeromexico",
+    description:
+      "Colaboré en el desarrollo de la app AMX 2.0 utilizando React Native y TypeScript, enfocándome en entregar software de alta calidad y optimizando la experiencia del usuario. Trabajé bajo la metodología Scrum, participando en sprints, revisiones de backlog y retrospectivas para asegurar un flujo de trabajo ágil y eficiente. Trabajé con el patrón de diseño MVVM, para mantener el código estructurado, escalable y con una clara separación de responsabilidades. Mi contribución ayudó a mejorar la funcionalidad de la app mediante la implementación de nuevas funcionalidades, fortaleciendo la experiencia del cliente en la app AMX 2.0.",
+    image: 'companies/aeromexico.webp',
+  },
+  {
+    date: "Septiembre 2024 - Octubre 2024",
+    title: "Ingenierío Jr de aplicaciones y desarrollo",
+    company: "Grupo vida",
+    description:
+      "Desarrollé software para optimizar procesos internos, incluyendo un sitio web con Next.js y Tailwind para gestionar clientes y vendedores. Además, diseñé y desarrollé una API en .NET Framework para integrar servicios y mejorar la eficiencia en la gestión de datos. Inicié una app móvil en React Native con Clean Architecture y MVVM, dejando una base sólida para su desarrollo futuro. Implementé buenas prácticas en el equipo como Git Flow, Conventional Commits y revisión de Pull Requests, mejorando la colaboración y calidad del código.",
+    image: 'companies/grupo-vida.webp',
+  },
+  {
+    date: "Noviembre 2023 - Agosto 2024",
     title: "Fullstack Web Developer Jr",
     company: "Yo Contigo It",
     description:
-      "Soy responsable de desarrollar software utilizando tecnologías como JavaScript, TypeScript, Angular, AngularJS y React Native. Lidero un equipo en un proyecto interno, asegurando el cumplimiento de objetivos y plazos. En un proyecto móvil con React Native, implementé una arquitectura limpia y hexagonal junto con el patrón MVVM. Participo en reuniones con clientes para generar más requerimientos y colaboro con mi equipo para planificar, diseñar y ejecutar tareas, aplicando habilidades técnicas y de colaboración. También soy responsable de hacer el software responsivo, realizar builds en iOS y publicarlas en la App Store, además de documentar las características desarrolladas.",
+      "Fui responsable de desarrollar software utilizando tecnologías como JavaScript, TypeScript, Angular, AngularJS y React Native. Lidero un equipo en un proyecto interno, asegurando el cumplimiento de objetivos y plazos. En un proyecto móvil con React Native, implementé una arquitectura limpia y hexagonal junto con el patrón MVVM. Participo en reuniones con clientes para generar más requerimientos y colaboro con mi equipo para planificar, diseñar y ejecutar tareas, aplicando habilidades técnicas y de colaboración. También soy responsable de hacer el software responsivo, realizar builds en iOS y publicarlas en la App Store, además de documentar las características desarrolladas.",
     // link: "https://twitch.tv/midudev",
     image: 'companies/yo-contigo-it.webp',
   },
