feat: actualizar experiencia

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,6 +2,14 @@
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
   {
+    date: "Enero 2025 - Presente",
+    title: "Fullstack Web Developer",
+    company: "BAP Corporativo",
+    description:
+      "Como desarrollador FullStack Web Developer , he trabajado en el desarrollo y mantenimiento de aplicaciones web utilizando Vue.js y Nuxt.js en el frontend, asegurando interfaces dinámicas y óptimas en rendimiento. En el backend, he desarrollado APIs y servicios utilizando PHP con el framework Slim, garantizando eficiencia y escalabilidad en el procesamiento de datos. Tambien trabajar en equipo con metodologías ágiles para entregar productos de alta calidad y adaptados a las necesidades del negocio.",
+    image: 'companies/bap_corporativo.webp',
+  },
+  {
     date: "Octubre 2024 - Diciembre 2024",
     title: "React Native Developer Jr",
     company: "Aeromexico",
