feat: actualizar about me

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -9,11 +9,9 @@ const personalImageAlt = "Erick Hernández Ortega";
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Erick Ramón Hernández Ortega. Actualmente estoy en búsqueda de
-      nuevas oportunidades como <strong
-        >Fullstack Web Developer JR o React Native Developer</strong
-      >, donde pueda aportar mis habilidades y seguir desarrollándome
-      profesionalmente.
+      Me llamo Erick Ramón Hernández Ortega. Actualmente estoy trabajando en <strong>BAP Corporativo</strong>
+      desempeñándome como Fullstack Web Developer.
+      Siempre estoy en constante aprendizaje y mejora, explorando nuevas tecnologías y mejores prácticas para optimizar mi trabajo.
     </p>
 
     <p>
