--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -30,7 +30,7 @@ import SocialPill from "@/components/SocialPill.astro"
   <p
     class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
-    1 año de experiencia. <strong>Ingeniero en ciencias computacionales </strong> 
+    +1 año de experiencia. <strong>Ingeniero en ciencias computacionales </strong> 
     de Jalisco, México 🇲🇽. Fullstack Web Developer y Mobile Developer con React Native. 
     Desarrollando Software Único.
   </p>
