--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -16,6 +16,8 @@ import ReactNative from "./icons/ReactNative.astro";
 import Typescript from "./icons/Typescript.astro";
 import Sql from "./icons/Sql.astro";
 import Vue from "./icons/Vue.astro";
+import Nest from "./icons/Nest.astro";
+import Mongo from "./icons/Mongo.astro";
 
 // TODO: poner bien el link de angular
 const TAGS = {
@@ -25,7 +27,7 @@ const TAGS = {
     icon: NextJS,
   },
   TAILWIND: {
-    name: "Tailwind CSS",
+    name: "Tailwind",
     class: "bg-[#003159] text-white",
     icon: Tailwind,
   },
@@ -89,8 +91,27 @@ const TAGS = {
     class: "bg-[#4fc08d] text-black",
     icon: Vue,
   },
+  NEST: {
+    name: "Nest",
+    class: "bg-[#000] text-white",
+    icon: Nest,
+  },
+  MONGO: {
+    name: "Mongo",
+    class: "bg-[#47a248] text-white",
+    icon: Mongo,
+  },
 };
 const PROJECTS = [
+  {
+    title: "Adogtame 3 Admin", 
+    description:
+      "Adogtame Admin es una plataforma web desarrollada para facilitar la gestión de adopciones de mascotas. Este panel de administración permite a los administradores registrar usuarios, gestionar mascotas, revisar solicitudes de adopción y visualizar estadísticas. El frontend está desarrollado con Next.js y TypeScript, mientras que el backend utiliza NestJS, MongoDB, JWT, y Swagger para documentación. El sistema cuenta con autenticación segura, validaciones y una API robusta.",
+    link: "https://adogtame-3-admin-front.vercel.app/auth",
+    github: "https://github.com/Erick-Hernandez-Ortega/adogtame-3-admin-front",
+    image: "/projects/adogtame-3-admin.webp",
+    tags: [TAGS.NEXT, TAGS.TYPESCRIPT, TAGS.NEST, TAGS.MONGO, TAGS.TAILWIND],
+  },
   {
     title: "Pokemon Game",
     description:
