feat: actualizar experiencia

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,7 +6,7 @@ const EXPERIENCE = [
     title: "Fullstack Web Developer",
     company: "BAP Corporativo",
     description:
-      "Como desarrollador FullStack Web Developer , he trabajado en el desarrollo y mantenimiento de aplicaciones web utilizando Vue.js y Nuxt.js en el frontend, asegurando interfaces dinámicas y óptimas en rendimiento. En el backend, he desarrollado APIs y servicios utilizando PHP con el framework Slim, garantizando eficiencia y escalabilidad en el procesamiento de datos. Tambien trabajar en equipo con metodologías ágiles para entregar productos de alta calidad y adaptados a las necesidades del negocio.",
+      "Me especialicé en el desarrollo y mantenimiento de aplicaciones web con Vue.js, diseñando interfaces interactivas para una experiencia de usuario óptima. En el backend me encargué de la API en PHP, optimizando su rendimiento y asegurando su escalabilidad. Formé parte de equipos ágiles bajo Scrum, entregando mejoras en ciclos cortos y adaptándome rápidamente a nuevos requerimientos. Más allá de escribir código, impulsé buenas prácticas y busqué optimizar procesos para superar expectativas",
     image: 'companies/bap_corporativo.webp',
   },
   {
@@ -19,7 +19,7 @@ const EXPERIENCE = [
   },
   {
     date: "Septiembre 2024 - Octubre 2024",
-    title: "Ingenierío Jr de aplicaciones y desarrollo",
+    title: "Application and Development Engineer Jr",
     company: "Grupo vida",
     description:
       "Desarrollé software para optimizar procesos internos, incluyendo un sitio web con Next.js y Tailwind para gestionar clientes y vendedores. Además, diseñé y desarrollé una API en .NET Framework para integrar servicios y mejorar la eficiencia en la gestión de datos. Inicié una app móvil en React Native con Clean Architecture y MVVM, dejando una base sólida para su desarrollo futuro. Implementé buenas prácticas en el equipo como Git Flow, Conventional Commits y revisión de Pull Requests, mejorando la colaboración y calidad del código.",
