--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -9,8 +9,8 @@ const personalImageAlt = "Erick Hernández Ortega";
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Erick Ramón Hernández Ortega. Actualmente estoy trabajando en <strong>BAP Corporativo</strong>
-      desempeñándome como Fullstack Web Developer.
+      Me llamo Erick Ramón Hernández Ortega. Actualmente estoy en búsqueda de
+      nuevas oportunidades como <strong>Fullstack Web Developer o React Native Developer</strong>
       Siempre estoy en constante aprendizaje y mejora, explorando nuevas tecnologías y mejores prácticas para optimizar mi trabajo.
     </p>
 
