feat: actualizar fecha

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,7 +2,7 @@
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
   {
-    date: "Enero 2025 - Presente",
+    date: "Enero 2025 - Abril 2025",	
     title: "Fullstack Web Developer",
     company: "BAP Corporativo",
     description:
